--- a/index.html
+++ b/index.html
@@ -54,6 +54,13 @@
             font-size: 24px;
             font-weight: bold;
         }
+         #player1-score {
+            color: blue;
+        }
+
+        #player2-score {
+            color: red;
+        }
     </style>
 </head>
 <body>
