--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
 </head>
 <body>
     <div class="game-container">
-        <div class="paddle" id="player1"></div>
-        <div class="paddle" id="player2"></div>
+        <div class="score" id="player1-score">Player 1: 0</div>
+        <div class="score" id="player2-score">Player 2: 0</div>
         <div class="ball" id="ball"></div>
     </div>
     <div class="score-container">
